feat(audit-log): add source IP tracking
- Add SourceIP field to AuditLogExt model
- Pass SourceIP in ResolveToAuditLog()
- Return SourceIP in API response
- Add source_ip to swagger definition
- Add IP column to frontend UI
- Add i18n translations (en/zh)
- Add unit tests for SourceIP functionality
- Add GitHub Action workflow for building Harbor

Notion: https://www.notion.so/Harbor-IP-2fc2cf39b32c818a9e27e751782bfaab

--- a/src/portal/src/i18n/lang/en-us-lang.json
+++ b/src/portal/src/i18n/lang/en-us-lang.json
@@ -490,6 +490,7 @@
         "SIMPLE": "Simple",
         "ITEMS": "items",
         "RESULT": "Success",
+        "SOURCE_IP": "Source IP",
         "FILTER_PLACEHOLDER": "Filter Logs",
         "INVALID_DATE": "Invalid date.",
         "OF": "of",
